<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="employee"
            type="lightcycleconsulting.com.squarecodesample.model.Employee" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        app:cardCornerRadius="@dimen/default_card_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/more_info_button"
                android:layout_width="@dimen/more_info_size"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/margin_large"
                android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:backgroundTint="@color/dark_background"
                android:contentDescription="@string/arrow"
                app:layout_constraintBottom_toBottomOf="@+id/avatar_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/avatar_image" />

            <ImageView
                android:id="@+id/employee_image"
                android:layout_width="@dimen/default_constraint"
                android:layout_height="@dimen/default_constraint"
                android:contentDescription="@string/avatar_image"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="w,9:16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/avatar_image"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:contentDescription="@string/avatar"
                app:layout_constraintBottom_toTopOf="@+id/hideable_contents"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_image"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/name_field"
                style="@style/HeaderStyle"
                android:layout_width="@dimen/default_constraint"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@{employee.fullName}"
                app:layout_constraintStart_toEndOf="@+id/avatar_image"
                app:layout_constraintTop_toTopOf="@+id/avatar_image"
                tools:text="@string/name_tools_text" />
            <TextView
                android:id="@+id/profile_label"
                style="@style/CaptionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                app:layout_constraintStart_toStartOf="@+id/name_field"
                app:layout_constraintTop_toBottomOf="@+id/name_field" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/hideable_contents"
                android:layout_width="@dimen/default_constraint"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/email_field"
                    style="@style/SubHeaderStyle"
                    android:layout_width="@dimen/default_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_x_large"
                    android:text="@{employee.emailAddress}"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/email_icon"
                    app:layout_constraintTop_toTopOf="@+id/email_icon"
                    tools:text="@string/email_tools_text" />

                <TextView
                    android:id="@+id/team_field"
                    style="@style/SubHeaderStyle"
                    android:layout_width="@dimen/default_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@{employee.team}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/team_icon"
                    app:layout_constraintTop_toTopOf="@+id/team_icon"
                    tools:text="@string/team_tools_text" />

                <TextView
                    android:id="@+id/employee_type_field"
                    style="@style/SubHeaderStyle"
                    android:layout_width="@dimen/default_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_x_large"
                    android:text="@{employee.employeeType.friendlyName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/employee_type_icon"
                    app:layout_constraintTop_toTopOf="@+id/employee_type_icon"
                    tools:text="@string/employee_type_tools_text" />

                <TextView
                    android:id="@+id/biography_field"
                    style="@style/CaptionStyle"
                    android:layout_width="@dimen/default_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_x_large"
                    android:layout_marginTop="@dimen/margin_x_small"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:maxLines="3"
                    android:text="@{employee.biography}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/biography_icon"
                    app:layout_constraintTop_toTopOf="@+id/biography_icon"
                    app:layout_constraintVertical_bias="1.0"
                    tools:text="@string/biography_tools_text" />

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:contentDescription="@string/email_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_email_24px"
                    app:tint="@color/dark_background" />

                <TextView
                    android:id="@+id/worl_label"
                    style="@style/CaptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/work"
                    app:layout_constraintStart_toStartOf="@+id/email_field"
                    app:layout_constraintTop_toBottomOf="@+id/email_field" />

                <ImageView
                    android:id="@+id/team_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_small"
                    android:contentDescription="@string/team"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/worl_label"
                    app:srcCompat="@drawable/ic_group_24px"
                    app:tint="@color/dark_background" />

                <ImageView
                    android:id="@+id/employee_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_small"
                    android:contentDescription="@string/employee_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/team_label"
                    app:srcCompat="@drawable/ic_category_24px"
                    app:tint="@color/dark_background" />

                <ImageView
                    android:id="@+id/biography_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_small"
                    android:contentDescription="@string/biography"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/employee_type_label"
                    app:srcCompat="@drawable/ic_info_24px"
                    app:tint="@color/dark_background" />

                <TextView
                    android:id="@+id/team_label"
                    style="@style/CaptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    app:layout_constraintStart_toStartOf="@+id/team_field"
                    app:layout_constraintTop_toBottomOf="@+id/team_field" />

                <TextView
                    android:id="@+id/employee_type_label"
                    style="@style/CaptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_type"
                    app:layout_constraintStart_toStartOf="@+id/employee_type_field"
                    app:layout_constraintTop_toBottomOf="@+id/employee_type_field" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>